--- a/zoetic-api.cabal
+++ b/zoetic-api.cabal
@@ -23,5 +23,6 @@ executable zoetic-api
   build-depends:       
     base >=4.7 && <4.8
     , scotty == 0.9.1
+    , aeson == 0.8.0.2
   hs-source-dirs:      src
   default-language:    Haskell2010
