--- a/zoetic-space-api.cabal
+++ b/zoetic-space-api.cabal
@@ -21,5 +21,6 @@ executable zoetic-space-api
     base >=4.7 && <4.8
     , scotty == 0.9.1
     , aeson == 0.8.0.2
+    , hypher == 0.1.2
   hs-source-dirs:      src
   default-language:    Haskell2010
