--- a/zoetic-space-api.cabal
+++ b/zoetic-space-api.cabal
@@ -19,8 +19,13 @@ executable zoetic-space-api
   -- other-extensions:    
   build-depends:       
     base >=4.7 && <4.8
-    , scotty == 0.9.1
-    , aeson == 0.8.0.2
-    , hypher == 0.1.2
+    , scotty ==0.9.1
+    , aeson ==0.8.0.2
+    , hypher ==0.1.2
+    , unordered-containers ==0.2.*
+    , text >= 1.1 && < 1.3
+    , transformers ==0.4.*
+    , string-conversions ==0.3.0.3
+
   hs-source-dirs:      src
   default-language:    Haskell2010
