--- a/zoetic-space-api.cabal
+++ b/zoetic-space-api.cabal
@@ -26,6 +26,7 @@ executable zoetic-space-api
     , text >= 1.1 && < 1.3
     , transformers ==0.4.*
     , string-conversions ==0.3.0.3
+    , data-lens-light ==0.1.2.1
 
   hs-source-dirs:      src
   default-language:    Haskell2010
