--- a/zoetic-space-api.cabal
+++ b/zoetic-space-api.cabal
@@ -27,6 +27,7 @@ executable zoetic-space-api
     , transformers ==0.4.*
     , string-conversions ==0.3.0.3
     , bytestring ==0.10.*
+    , http-types ==0.8.5
 
   hs-source-dirs:      src
   default-language:    Haskell2010
