--- a/zoetic-space-api.cabal
+++ b/zoetic-space-api.cabal
@@ -28,6 +28,20 @@ executable zoetic-space-api
     , string-conversions ==0.3.0.3
     , bytestring ==0.10.*
     , http-types ==0.8.5
+    , wai ==3.0.2.2
+    , warp ==3.0.9
 
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+test-suite test
+    type:              exitcode-stdio-1.0
+    main-is:           Main.hs
+    hs-source-dirs:    tests
+    ghc-options:       -Wall
+
+    build-depends: base
+                 , zoetic-space-api
+                 , hspec >= 2.0.0
+                 , hspec-wai ==0.6.3
+                 , html-conduit < 1.1.1
