--- a/zoetic-space-api.cabal
+++ b/zoetic-space-api.cabal
@@ -1,47 +1,55 @@
 name:                zoetic-space-api
 version:             0.1.0.0
--- synopsis:            
--- description:         
 homepage:            zoetic.space
 license:             AGPL-3
 license-file:        LICENSE
 author:              Zoetic Community
 maintainer:          jeff@jetaggart.com
--- copyright:           
 category:            Web
 build-type:          Simple
--- extra-source-files:  
-cabal-version:       >=1.10
+cabal-version:       >=1.22
+
+library
+  default-language:  Haskell2010
+  hs-source-dirs:    src
+  exposed-modules:   ZoeticSpace.Application
+                     ZoeticSpace.Persistence
+                     ZoeticSpace.Validation
+                     ZoeticSpace.Api.Users
+  ghc-options:       -Wall -fwarn-tabs -O0
+
+  build-depends: base >=4.7 && <4.8
+               , scotty ==0.9.1
+               , aeson ==0.8.0.2
+               , hypher ==0.1.5
+               , unordered-containers ==0.2.*
+               , text >= 1.1 && < 1.3
+               , transformers ==0.4.*
+               , string-conversions ==0.3.0.3
+               , bytestring ==0.10.*
+               , http-types ==0.8.5
+               , wai ==3.0.2.2
+               , warp ==3.0.9
 
 executable zoetic-space-api
-  main-is:             Main.hs
-  -- other-modules:       
-  -- other-extensions:    
-  build-depends:       
-    base >=4.7 && <4.8
-    , scotty ==0.9.1
-    , aeson ==0.8.0.2
-    , hypher ==0.1.5
-    , unordered-containers ==0.2.*
-    , text >= 1.1 && < 1.3
-    , transformers ==0.4.*
-    , string-conversions ==0.3.0.3
-    , bytestring ==0.10.*
-    , http-types ==0.8.5
-    , wai ==3.0.2.2
-    , warp ==3.0.9
-
-  hs-source-dirs:      src
   default-language:    Haskell2010
+  main-is:             Main.hs
+  hs-source-dirs:      driver
+  ghc-options:         -Wall
+  build-depends: base
+               , zoetic-space-api
+               , warp
 
 test-suite test
-    type:              exitcode-stdio-1.0
-    main-is:           Main.hs
-    hs-source-dirs:    tests
-    ghc-options:       -Wall
+  default-language:    Haskell2010
+  type:              exitcode-stdio-1.0
+  main-is:           Main.hs
+  hs-source-dirs:    tests
+  ghc-options:       -Wall
 
-    build-depends: base
-                 , zoetic-space-api
-                 , hspec >= 2.0.0
-                 , hspec-wai ==0.6.3
-                 , html-conduit < 1.1.1
+  build-depends: base
+                , zoetic-space-api
+                , hspec >= 2.0.0
+                , hspec-wai ==0.6.3
+                , wai ==3.0.2.2
+                , aeson
