Added a length test to /v1/users

--- a/zoetic-space-api.cabal
+++ b/zoetic-space-api.cabal
@@ -58,3 +58,4 @@ test-suite test
                , hspec >= 1.5.3
                , wai-extra >= 3
                , aeson
+               , containers
